--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 	</description>
 	<artifactId>downstream-ext</artifactId>
 	<packaging>hpi</packaging>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0</version>
     <url>http://wiki.hudson-ci.org/display/HUDSON/Downstream-Ext+Plugin</url>
     <developers>
         <developer>
@@ -57,4 +57,10 @@
             </plugin>
         </plugins>
     </build>
+
+  <scm>
+    <connection>scm:svn:https://guest@svn.dev.java.net/svn/hudson/tags/downstream-ext-1.0</connection>
+    <developerConnection>scm:svn:https://svn.dev.java.net/svn/hudson/tags/downstream-ext-1.0</developerConnection>
+    <url>https://hudson.dev.java.net/source/browse/hudson/hudson/plugins/downstream-ext/tags/downstream-ext-1.0</url>
+  </scm>
 </project>
