--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,13 @@
             <timezone>1</timezone>
         </developer>
     </developers>
+
+	<licenses>
+		<license>
+			<name>MIT license</name>
+			<comments>All source code is under the MIT license.</comments>
+		</license>
+	</licenses>
 	
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
