--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,9 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>org.jvnet.hudson.plugins</groupId>
+		<groupId>org.jenkins-ci.plugins</groupId>
 		<artifactId>plugin</artifactId>
-		<version>1.341</version>
-		<relativePath>../pom.xml</relativePath>
+		<version>1.398</version>
 	</parent>
 
 	<name>Downstream-Ext</name>
@@ -75,4 +74,19 @@
     		<scope>test</scope>
     	</dependency>
     </dependencies>
+    
+    <!-- get every artifact through maven.glassfish.org, which proxies all 
+        the artifacts that we need -->
+    <repositories>
+        <repository>
+            <id>m.g.o-public</id>
+            <url>http://maven.glassfish.org/content/groups/public/</url>
+        </repository>
+    </repositories>
+    
+    <scm>
+        <connection>scm:git:github.com:jenkinsci/downstream-ext-plugin.git</connection>
+        <developerConnection>scm:git:git@github.com:jenkinsci/downstream-ext-plugin.git</developerConnection>
+        <url>https://github.com/jenkinsci/downstream-ext-plugin</url>
+    </scm>
 </project>
