--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	</description>
 	<artifactId>downstream-ext</artifactId>
 	<packaging>hpi</packaging>
-	<version>1.7</version>
+	<version>1.8-SNAPSHOT</version>
     <url>https://wiki.jenkins-ci.org/display/JENKINS/Downstream-Ext+Plugin</url>
     <developers>
         <developer>
