updated maven pom to use repo.jenkins-ci.org repository

--- a/pom.xml
+++ b/pom.xml
@@ -73,8 +73,8 @@
         the artifacts that we need -->
     <repositories>
         <repository>
-            <id>m.g.o-public</id>
-            <url>http://maven.glassfish.org/content/groups/public/</url>
+            <id>repo.jenkins-ci.org</id>
+            <url>http://repo.jenkins-ci.org/public/</url>
         </repository>
     </repositories>
     
@@ -83,4 +83,12 @@
         <developerConnection>scm:git:git@github.com:jenkinsci/downstream-ext-plugin.git</developerConnection>
         <url>https://github.com/jenkinsci/downstream-ext-plugin</url>
     </scm>
-</project>
+
+    <pluginRepositories>
+        <pluginRepository>
+            <id>repo.jenkins-ci.org</id>
+            <url>http://repo.jenkins-ci.org/public/</url>
+        </pluginRepository>
+    </pluginRepositories>
+</project>  
+
